--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,5 +1,5 @@
 input {
-  background-color: #2196F3;
+  background-color: #2196f3;
 }
 
 /* The switch - the box around the slider */
@@ -26,8 +26,7 @@ input {
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  transition: transform 0.4s;
   border-radius: 34px;
 }
 
@@ -39,17 +38,17 @@ input {
   left: 2px;
   bottom: 2px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  transition: transform 0.4s;
+  transition: 0.4s;
   border-radius: 50%;
 }
 
 input:checked + .slaSlider {
-  background-color: #2196F3;
+  background-color: #2196f3;
 }
 
 input:focus + .slaSlider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #2196f3;
 }
 
 input:checked + .slaSlider:before {
@@ -65,7 +64,7 @@ input[type="range"].slaRange::-webkit-slider-thumb {
   margin: 0;
 }
 
- input[type="range"].slaRange {
+input[type="range"].slaRange {
   height: 30px;
   width: 100%;
   overflow: hidden;
@@ -78,7 +77,7 @@ input[type="range"].slaRange::-webkit-slider-runnable-track {
   height: 6px;
   /* width: 30px; */
   border-radius: 4px;
-  background-color: #2196F3;
+  background-color: #2196f3;
 }
 /* 滑動鈕 樣式 */
 input[type="range"].slaRange::-webkit-slider-thumb {
@@ -88,5 +87,5 @@ input[type="range"].slaRange::-webkit-slider-thumb {
   margin-top: -5px;
   background-color: #fff;
   border-radius: 50%;
-  border: 2px solid #2196F3;
+  border: 2px solid #2196f3;
 }
